# my_utils

./: LICENSE  README.md  pyproject.toml
.github/agents/: 00_global_policy.md  10_architecture.md
.github/workflows/: python-package.yml
docs/: mkdocs.yml
docs/docs/: index.md
my_utils/: dataset.py
my_utils/modeling/: predict.py  train.py
notebooks/: boxplot.ipynb
src/my_utils/: __init__.py  features.py  paths.py  plots.py
src/my_utils/plotting/: __init__.py  plot_fonts.py
src/my_utils/printing/: __init__.py  printing.py
