[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my_utils"
dynamic = ["version"]
description = "Useful utilities across projects"
authors = [
  { name = "Eduard Haiman" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.13.0"

# read from git tags for project versioning
[tool.hatch.version] 
source = "vcs"  

[tool.ruff]
line-length = 99
src = ["my_utils"]
include = ["pyproject.toml", "my_utils/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["my_utils"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "invoke>=2.2.1",
]

